src/test/ui/error-codes/E0223.stderr
error[E0223]: ambiguous associated type
  --> $DIR/E0223.rs:4:14
   |
LL |     let foo: MyTrait::X;
   |              ^^^^^^^^^^ help: use fully-qualified syntax: `<Type as MyTrait>::X`

error: aborting due to previous error

For more information about this error, try `dustc --explain E0223`.
